--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.4.1
   google_fonts: ^6.2.1
   http: ^1.6.0
+  print_slayer: ^1.1.0
 
 dev_dependencies:
   flutter_test:
